--- a/meu-projeto/docker-compose.yml
+++ b/meu-projeto/docker-compose.yml
@@ -8,11 +8,13 @@ services:
     volumes:
       - ./backend:/app
     restart: always
+    environment:
+      - MONGO_URI=seu-mongo-uri
 
   frontend:
     build: ./frontend
     ports:
-      - "4200:80"
+      - "4200:4200"
     volumes:
       - ./frontend:/app
     restart: always
