--- a/meu-projeto/docker-compose.yml
+++ b/meu-projeto/docker-compose.yml
@@ -17,4 +17,7 @@ services:
       - "4200:4200"
     volumes:
       - ./frontend:/app
+      - /app/node_modules
     restart: always
+    depends_on:
+      - backend
