--- a/meu-projeto/frontend/Dockerfile
+++ b/meu-projeto/frontend/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /app
 
 COPY package*.json ./
 
+RUN npm install -g @angular/cli
 RUN npm install
 
 COPY . .
@@ -12,4 +13,4 @@ COPY . .
 EXPOSE 4200
 
 # Comando para rodar a aplicação
-CMD ["npm", "run", "start"]
+CMD ["ng", "serve", "--host", "0.0.0.0"]
