--- a/meu-projeto/frontend/Dockerfile
+++ b/meu-projeto/frontend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:18
+FROM node:18 as build
 
 WORKDIR /app
 
@@ -8,9 +8,15 @@ RUN npm install -g @angular/cli
 RUN npm install
 
 COPY . .
+RUN npm run build --prod
+
+# Production stage
+FROM nginx:alpine
+
+COPY --from=build /app/dist/frontend /usr/share/nginx/html
 
 # Expõe a porta padrão do ng serve
-EXPOSE 4200
+EXPOSE 80
 
 # Comando para rodar a aplicação
-CMD ["ng", "serve", "--host", "0.0.0.0"]
+CMD ["nginx", "-g", "daemon off;"]
