--- a/meu-projeto/frontend/Dockerfile
+++ b/meu-projeto/frontend/Dockerfile
@@ -8,8 +8,7 @@ RUN npm install -g @angular/cli
 RUN npm install
 
 COPY . .
-RUN npm run build --configuration production
-
+RUN npm run build -- --prod
 
 # Production stage
 FROM nginx:alpine
